fixing the user image being distorted if the provided image is not a perfect square

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -20811,7 +20811,7 @@ th:not(:first-child), td:not(:first-child) {
 .user-page-img {
   width: 9rem;
   background: rgb(55, 90, 127);
-  border-radius: 50%;
+  clip-path: circle(40% at 50% 50%);
   filter: drop-shadow(0px 0px 1px white);
 }
 
@@ -20878,6 +20878,22 @@ th:not(:first-child), td:not(:first-child) {
   font-size: 1.3rem;
   color: #060e14;
   font-weight: 600;
+}
+
+.user-img-border {
+  filter: drop-shadow(0px 0px 1px white);
+  background-size: cover;
+  background-color: rgb(55, 90, 127);
+  background-image: url(./img/user.svg);
+  border-radius: 50%;
+}
+
+.user-img {
+  height: 9rem;
+  width: 9rem;
+  clip-path: circle(47% at 50% 50%);
+  background-size: cover;
+  background-position: center;
 }
 
 /*# sourceMappingURL=main.css.map */
