--- a/app/assets/sass/_user.scss
+++ b/app/assets/sass/_user.scss
@@ -1,7 +1,7 @@
 .user-page-img {
     width: 9rem;
     background: rgb(55, 90, 127);
-    border-radius: 50%;
+    clip-path: circle(40% at 50% 50%);
     filter: drop-shadow(0px 0px 1px white);
 }
 .user-data-card {  
@@ -70,4 +70,22 @@
     color: #060e14;
     font-weight: 600;
 }
+
+.user-img-border {
+    filter: drop-shadow(0px 0px 1px white);
+    background-size: cover;
+    background-color: rgb(55, 90, 127);
+    background-image: url(./img/user.svg);
+    border-radius: 50%;
+}
+
+.user-img {
+    height: 9rem;
+    width: 9rem;
+    clip-path: circle(47% at 50% 50%);
+    background-size: cover;
+    background-position: center;
+}
+
+
 
